Mostly implemented UserTabController, UserPropController needs a lot of additional work
Signed-off-by: Vito Palmieri <v.palmieri11@studenti.unisa.it>