@@ -1,18 +1,21 @@
 package poco.company.group01pocolib.mvc.controller;
 
+import java.net.URL;
 import java.util.List;
 
 import javafx.beans.property.SimpleIntegerProperty;
 import javafx.beans.property.SimpleStringProperty;
-import javafx.collections.FXCollections;
+import javafx.collections.*;
 import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
+import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
-import javafx.scene.layout.VBox;
+import javafx.scene.control.Alert.AlertType;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
+import poco.company.group01pocolib.db.omnisearch.Search.*;
 import poco.company.group01pocolib.mvc.model.*;
 
 public class UserTabController {
@@ -45,9 +48,9 @@ public class UserTabController {
     @FXML private Button userLendButton;
 
     // Data management
-    private ObservableList<User> userData = FXCollections.observableArrayList();
+    private ObservableList<User> userData;
     private User selectedUser;
-    private Book selectedBook;
+    private List<SearchResult<User>> currentSearchResults;
 
     private Stage primaryStage;
     private PocoLibController mainController;
@@ -57,8 +60,23 @@ public class UserTabController {
      */
     @FXML
     private void initialize() {
-        initializeUserColumns();
-        userTableHandler();
+        // Initialize buttons bindings for disabling when no selection
+        userViewEditButton.disableProperty().bind(
+                userTable.getSelectionModel().selectedItemProperty().isNull()
+        );
+        userLendButton.disableProperty().bind(
+                userTable.getSelectionModel().selectedItemProperty().isNull()
+        );
+
+        // Binding for selected user
+        userTable.getSelectionModel().selectedItemProperty().addListener(observable -> {
+            selectedUser = userTable.getSelectionModel().getSelectedItem();
+        });
+
+        // Initialize search field listener
+        userSearchField.textProperty().addListener(observable -> {
+            userTableHandler();
+        });
     }
 
     /**
@@ -73,6 +91,7 @@ public class UserTabController {
 
     /**
      * @brief   Sets the data sets for the controller.
+     *
      * @param   bookSet The BookSet to use.
      * @param   userSet The UserSet to use.
      * @param   lendingSet The LendingSet to use.
@@ -81,51 +100,20 @@ public class UserTabController {
         this.bookSet = bookSet;
         this.userSet = userSet;
         this.lendingSet = lendingSet;
-        loadData();
-    }
-
-    /**
-     * @brief   Initializes the user table by setting up the columns.
-     */
-    public void initializeTable() {
-        initializeUserColumns();
     }
 
     /**
      * @brief   Loads data from the model into the controller.
      * @todo    Understand why the not null check is necessary
      */
-    void loadData() {
-        // loads all data from the model into the observable lists
-        if (userSet != null) {
-            userData.setAll(userSet.getUserSet());
-            userTable.setItems(userData);   //add all users to the table view
-        }
-
-    }
-
-    /**
-     * @brief   Refreshes the data in the controller by fetching the lists from the model.
-     */
-    public void refreshData() {
-        loadData(); //reload data from model
-        userTable.refresh();  //refresh table view
-    }
-
-    /**
-     * @brief   Sets the selected book from another tab.
-     * @param   book The book to set as selected.
-     */
-    public void setSelectedBook(Book book) {
-        this.selectedBook = book;
-    }
-
-    /**
-     * @brief   Gets the currently selected user.
-     * @return  The selected user, or null if none is selected.
-     */
-    public User getSelectedUser() {
-        return selectedUser;
+    public void loadData() {
+//        // loads all data from the model into the observable lists
+//        if (userSet != null) {
+//            userData.setAll(userSet.getUserSet());
+//            userTable.setItems(userData);   //add all users to the table view
+//        }
+        this.userData = FXCollections.observableArrayList(userSet.getListOfUsers());
+        userTable.setItems(userData);   //add all users to the table view
     }
 
     /**
@@ -134,7 +122,6 @@ public class UserTabController {
      *          the User objects will be displayed in each column.
      */
     private void initializeUserColumns() {
-    
         userIdColumn.setCellValueFactory(cellData -> 
             new SimpleStringProperty(cellData.getValue().getId()));
             
@@ -152,37 +139,163 @@ public class UserTabController {
     }
 
     /**
+     * @brief   Applies the default sorting method to the user table.
+     * @details This method clears any existing sort order and applies the default order based on the user's surname.
+     */
+    private void applyDefaultSortMethod() {
+        // Temporarily remove listener to avoid recursion
+        userTable.getSortOrder().removeListener(defaultSortOrderListener);
+
+        try {
+            userTable.getSortOrder().clear();
+            userSurnameColumn.setSortType(TableColumn.SortType.ASCENDING);
+            userTable.getSortOrder().add(userSurnameColumn);
+            userTable.sort();
+        } finally {
+            userTable.getSortOrder().addListener(defaultSortOrderListener);
+        }
+    }
+
+    /**
+     * @brief   Applies the default search sort method to the user table.
+     * @details This method sorts the table when containing search results, based on the hit count
+     *          of the SearchResult objects returned by the search.
+     */
+    private void applyDefaultSearchSortMethod() {
+        // Temporarily remove listener to avoid recursion
+        userTable.getSortOrder().removeListener(searchSortOrderListener);
+
+        try {
+            userTable.getSortOrder().clear();
+
+            // Re-order based on hits from search results
+            if (currentSearchResults != null && !currentSearchResults.isEmpty()) {
+                // Stream the search results
+                List<User> sortedByHits = currentSearchResults.stream()
+                        // Sort the stream by hit count
+                        .sorted()
+                        // Map to underlying `User` objects
+                        .map(sr -> sr.item)
+                        // Collect to list
+                        .toList();
+                // Update the observable list with hit-sorted users
+                userData.setAll(sortedByHits);
+            }
+
+        } finally {
+            userTable.getSortOrder().addListener(searchSortOrderListener);
+        }
+    }
+
+    /**
+     * @brief   Listener to re-apply default sorting when sort order becomes empty.
+     */
+    ListChangeListener<TableColumn<User, ?>> defaultSortOrderListener = change -> {
+        if (userTable.getSortOrder().isEmpty()) {
+            applyDefaultSortMethod();
+        }
+    };
+
+    /**
+     * @brief   Listener to re-apply default search sorting when sort order becomes empty.
+     */
+    ListChangeListener<TableColumn<User, ?>> searchSortOrderListener = change -> {
+        if (userTable.getSortOrder().isEmpty()) {
+            applyDefaultSearchSortMethod();
+        }
+    };
+
+    /**
      * @brief   Allows handling of swaps of shown lists based on the search field and sorting
      */
     private void userTableHandler() {
-        // Listen to selection changes in the table
-        userTable.getSelectionModel().selectedItemProperty().addListener(
-            (observable, oldValue, newValue) -> {
-                selectedUser = newValue;
-                // Enable/disable buttons based on selection
-                userViewEditButton.setDisable(newValue == null);
-                userLendButton.setDisable(newValue == null);
-            }
-        );
-        
-        // Initially disable buttons until a user is selected
-        userViewEditButton.setDisable(true);
-        userLendButton.setDisable(true);
-        
-        // Add listener to search field for real-time filtering
-        userSearchField.textProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue == null || newValue.trim().isEmpty()) {
-                // If search field is empty, show all users
-                loadData();
-            } else {
-                // Filter users based on search query
-                List<User> searchResults = userSet.search(newValue.toLowerCase().trim());
+        if (userSearchField.textProperty().getValue().isBlank()) {
+            loadData();
+            applyDefaultSortMethod();
 
-                // Clear old data and update the observable list with search results
-                userData.clear();
-                userData.addAll(searchResults);
+            // Remove eventual listener for search sort order
+            userTable.getSortOrder().removeListener(searchSortOrderListener);
+
+            // Default sort order listener is added
+            userTable.getSortOrder().addListener(defaultSortOrderListener);
+        } else {
+            // Clear any existing sort order to show results by hits
+            userTable.getSortOrder().clear();
+
+            String query = userSearchField.textProperty().getValue();
+
+            // Perform search and store results
+            currentSearchResults = userSet.search(query);
+
+            // Initial sort of search results by hits
+            applyDefaultSearchSortMethod();
+
+            // Update table items to show only search results
+            userTable.setItems(userData);
+
+            // Remove default sort listener
+            userTable.getSortOrder().removeListener(defaultSortOrderListener);
+
+            // Add search sort listener
+            userTable.getSortOrder().addListener(searchSortOrderListener);
+        }
+    }
+
+    /**
+     * @brief   Initializes the user table by setting up the handler and columns.
+     */
+    public void initializeTable() {
+        userTableHandler();
+        initializeUserColumns();
+    }
+
+    /**
+     * @brief   Launches the View/Edit User dialog.
+     * @details This method opens a new dialog window for viewing or editing a user's details. It takes into account
+     *          whether the user is new or existing, and whether editing is allowed.
+     *
+     * @param   userToEdit  The user to view or edit. If `null` and `isNewUser` is `true`, a new user will be created.
+     * @param   isNewUser   `true` if creating a new user, `false` if viewing/editing an existing user.
+     * @param   mode        The mode of the dialog, either VIEW, VIEW_ONLY, or EDIT.
+     */
+    public void launchViewEditUserDialog(User userToEdit, boolean isNewUser,
+                                         PropMode mode, Stage ownerStage) {
+        // Handling logical inconsistencies
+        if (userToEdit == null && !isNewUser ||
+            userToEdit != null && isNewUser ||
+            mode == PropMode.VIEW_ONLY && isNewUser)
+            return;
+
+        try {
+            URL url = getClass().getResource("/poco/company/group01pocolib/mvc/view/prop-user.fxml");
+            FXMLLoader loader = new FXMLLoader(url);
+            Parent root = loader.load();
+            UserPropController controller = loader.getController();
+            controller.setDependencies(mainController, userSet);
+
+            Stage stage = new Stage();
+            controller.setDialogStage(stage);
+            controller.setUser(userToEdit);
+            stage.setScene(new Scene(root));
+
+            if (isNewUser) {
+                stage.setTitle("Add New User");
+            } else {
+                stage.setTitle("View User Details");
             }
-        });
+
+            controller.setMode(mode);
+            stage.initOwner(ownerStage);
+            stage.initModality(Modality.WINDOW_MODAL);
+            stage.setResizable(false);
+
+            controller.setDialogStage(stage);
+
+            stage.show();
+
+        } catch (Exception e) {
+            System.err.println(e.getMessage());
+        }
     }
 
     // --------------- //
@@ -195,44 +308,7 @@ public class UserTabController {
      */
     @FXML
     private void handleUserAdd() {
-        try{
-            // Create a new empty user to be added
-            User newUser = new User();
-
-            // Load the fxml file
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/poco/company/group01pocolib/mvc/view/prop-user.fxml"));
-            VBox page = loader.load();
-
-            // Create the dialog Stage
-            Stage dialogStage = new Stage();
-            dialogStage.setTitle("Add New User");
-            dialogStage.initModality(Modality.WINDOW_MODAL);
-            dialogStage.initOwner(primaryStage);
-            Scene scene = new Scene(page);
-            dialogStage.setScene(scene);
-
-            // Set the controller
-            UserPropController controller = loader.getController();
-            controller.setDialogStage(dialogStage);
-            controller.setDependencies(mainController, userSet);
-            controller.setUser(newUser);        //TODO: implement setUser to automatically set edit mode if the user is new
-
-            dialogStage.showAndWait();
-
-            // If the user clicked Save, add the new user to the UserSet and refresh data
-            if (controller.isSaveClicked()) {
-                userSet.addOrEditUser(newUser);
-                refreshData();
-                mainController.refreshTabData();
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-            Alert alert = new Alert(Alert.AlertType.ERROR);
-            alert.setTitle("Error");
-            alert.setHeaderText("Could not open the Add User dialog.");
-            alert.setContentText("An unexpected error occurred: " + e.getMessage());
-            alert.showAndWait();
-        }
+        launchViewEditUserDialog(null, true, PropMode.EDIT, primaryStage);
     }
 
     /**
@@ -242,45 +318,8 @@ public class UserTabController {
      */
     @FXML
     private void handleUserViewEdit() {
-        
-        if (selectedUser == null) {
-            return; // No user selected(button disabled via Listner in TableHandler), do nothing
-        }
-
-        try{
-            // Load the fxml file
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/poco/company/group01pocolib/mvc/view/prop-user.fxml"));
-            VBox page = loader.load();
-
-            // Create the dialog Stage
-            Stage dialogStage = new Stage();
-            dialogStage.setTitle("View / Edit User");
-            dialogStage.initModality(Modality.WINDOW_MODAL);
-            dialogStage.initOwner(primaryStage);
-            Scene scene = new Scene(page);
-            dialogStage.setScene(scene);
-
-            // Set the controller
-            UserPropController controller = loader.getController();
-            controller.setDialogStage(dialogStage);
-            controller.setDependencies(mainController, userSet);
-            controller.setUser(selectedUser);  //set the selected user for viewing/editing
-
-            dialogStage.showAndWait();
-
-            // If the user clicked Save, update the user in the UserSet and refresh data
-            if (controller.isSaveClicked()) {
-                userSet.addOrEditUser(selectedUser); //update existing user
-                refreshData();
-                mainController.refreshTabData();
-            }
-        }catch(Exception e){
-            e.printStackTrace();
-            Alert alert = new Alert(Alert.AlertType.ERROR);
-            alert.setTitle("Error");
-            alert.setHeaderText("Could not open the View / Edit User dialog.");
-            alert.setContentText("An unexpected error occurred: " + e.getMessage());
-            alert.showAndWait();
+        if (selectedUser != null) {
+            launchViewEditUserDialog(selectedUser, false, PropMode.EDIT, primaryStage);
         }
     }
 
@@ -295,59 +334,20 @@ public class UserTabController {
     @FXML
     private void handleUserLend() {
         if (selectedUser == null) {
-            return; // No user selected(button disabled via Listner in TableHandler), do nothing
+            return; // No user selected(button disabled via Listener in TableHandler), do nothing
         }
 
         if (!selectedUser.canBorrow()) {
-            Alert alert = new Alert(Alert.AlertType.WARNING);
+            Alert alert = new Alert(AlertType.WARNING);
             alert.setTitle("Lending Not Allowed");
             alert.setHeaderText("User Cannot Borrow More Books");
-            alert.setContentText("The selected user has reached the maximum number of borrowed books and cannot borrow more at this time.");
+            alert.setContentText("The selected user has reached the maximum number of borrowed books and cannot" +
+                                 " borrow more at this time.");
             alert.showAndWait();
             return;
         }
 
-        // Check if a book was already selected
-        if (selectedBook != null) {
-            try {
-                // Open the lending dialog with user and book pre-selected
-                FXMLLoader loader = new FXMLLoader(getClass().getResource("/poco/company/group01pocolib/mvc/view/prop-lending.fxml"));
-                VBox page = loader.load();
-                
-                Stage dialogStage = new Stage();
-                dialogStage.setTitle("New Lending");
-                dialogStage.initModality(Modality.WINDOW_MODAL);
-                dialogStage.initOwner(primaryStage);
-                dialogStage.setScene(new Scene(page));
-                
-                LendingPropController controller = loader.getController();
-                controller.setDialogStage(dialogStage);
-                controller.setDependencies(lendingSet, bookSet, userSet, mainController);
-                
-                // The LendingPropController will handle creating the lending internally
-                // TODO: LendingPropController needs methods to pre-select user and book
-                
-                dialogStage.showAndWait();
-                
-                if (controller.isSaveClicked()) {
-                    // Refresh data after lending is created
-                    refreshData();
-                    mainController.refreshTabData();
-                }
-            } catch (Exception e) {
-                e.printStackTrace();
-                Alert alert = new Alert(Alert.AlertType.ERROR);
-                alert.setTitle("Error");
-                alert.setHeaderText("Could not open the New Lending dialog.");
-                alert.setContentText("An unexpected error occurred: " + e.getMessage());
-                alert.showAndWait();
-            }
-        } else {
-            // No book selected, go to Book tab to select one
-            // TODO: mainController needs getter methods for tabs and controllers
-            mainController.switchToTab(mainController.getBookTab());
-            //mainController.setSelectedUserForLending(selectedUser);
-        }
+        // This is an observed property, so setting it will trigger a check by the PocoLibController to switch tabs
+        mainController.setMasterSelectedUser(selectedUser);
     }
-    // TODO: no idea how to handle this
 }
